# rust-stm32f103-nucleo-64-template

./: LICENSE  README.md
nucleo-project/: .gdbinit  Cargo.toml  memory.x
nucleo-project/.cargo/: config
nucleo-project/src/: main.rs
